RESOLVED FIXED219639
[LFC][Integration] Invalidate line layout path for children of inlines
https://bugs.webkit.org/show_bug.cgi?id=219639
Summary [LFC][Integration] Invalidate line layout path for children of inlines
Antti Koivisto
Reported 2020-12-08 04:58:43 PST
We currently assume you can just invalidate the direct parent.
Attachments
patch (6.97 KB, patch)
2020-12-08 05:51 PST, Antti Koivisto
no flags
patch (7.13 KB, patch)
2020-12-08 06:25 PST, Antti Koivisto
ews-feeder: commit-queue-
patch (7.33 KB, patch)
2020-12-08 06:33 PST, Antti Koivisto
no flags
patch (7.51 KB, patch)
2020-12-08 07:38 PST, Antti Koivisto
zalan: review+
ews-feeder: commit-queue-
patch (7.30 KB, patch)
2020-12-08 09:08 PST, Antti Koivisto
ews-feeder: commit-queue-
patch (9.28 KB, patch)
2020-12-22 05:09 PST, Antti Koivisto
no flags
patch (9.42 KB, patch)
2020-12-22 07:40 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-12-08 05:51:03 PST
Antti Koivisto
Comment 2 2020-12-08 06:25:25 PST
Antti Koivisto
Comment 3 2020-12-08 06:33:45 PST
Antti Koivisto
Comment 4 2020-12-08 07:38:29 PST
EWS
Comment 5 2020-12-08 09:01:33 PST
Tools/Scripts/svn-apply failed to apply attachment 415643 [details] to trunk. Please resolve the conflicts and upload a new patch.
Antti Koivisto
Comment 6 2020-12-08 09:08:28 PST
EWS
Comment 7 2020-12-08 10:25:52 PST
Committed r270544: <https://trac.webkit.org/changeset/270544> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415650 [details].
Radar WebKit Bug Importer
Comment 8 2020-12-08 10:26:19 PST
Ryan Haddad
Comment 9 2020-12-09 12:05:37 PST
This caused two tests to crash on iOS. Looks like EWS caught it, but CQ landed the change before the result was final. https://ews-build.webkit.org/#/builders/51/builds/3119 https://bugs.webkit.org/show_bug.cgi?id=219702
Ryan Haddad
Comment 10 2020-12-09 12:12:50 PST
Reverted r270544 and r270569 for reason: Caused two editing tests to consistently crash on iOS Committed r270594: <https://trac.webkit.org/changeset/270594>
Ryan Haddad
Comment 11 2020-12-09 12:13:24 PST
Note: https://trac.webkit.org/changeset/270569/webkit was landed as a follow up build fix, so that will need to be integrated as part of re-landing.
Antti Koivisto
Comment 12 2020-12-22 05:09:34 PST
Antti Koivisto
Comment 13 2020-12-22 07:40:40 PST
EWS
Comment 14 2020-12-22 10:12:07 PST
Committed r271055: <https://trac.webkit.org/changeset/271055> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416663 [details].
Note You need to log in before you can comment on or make changes to this bug.