[LFC][Integration] Invalidate line layout path for children of inlines https://bugs.webkit.org/show_bug.cgi?id=219639

Reviewed by Zalan Bujtas.

We currently assume you can just invalidate the direct parent.

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::blockContainer):
(WebCore::LayoutIntegration::LineLayout::containing):
* layout/integration/LayoutIntegrationLineLayout.h:
* rendering/RenderObject.cpp:
(WebCore::RenderObject::insertedIntoTree):
(WebCore::RenderObject::willBeRemovedFromTree):

Invalidate here.

* rendering/RenderText.cpp:
(WebCore::RenderText::setText):
* rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::attachToRenderElementInternal):
* rendering/updating/RenderTreeBuilderBlock.cpp:
(WebCore::RenderTreeBuilder::Block::attachIgnoringContinuation):
(WebCore::RenderTreeBuilder::Block::detach):


Canonical link: https://commits.webkit.org/232219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270544 268f45cc-cd09-0410-ab3c-d52691b4dbfc