Source/WebCore/layout/integration/LayoutIntegrationLineLayout.h
@@ -56,6 +56,7 @@ public:
     LineLayout(RenderBlockFlow&);
     ~LineLayout();
 
+    static RenderBlockFlow* blockContainer(RenderObject&);
     static LineLayout* containing(RenderObject&);
     static const LineLayout* containing(const RenderObject&);
 
