Source/WebCore/rendering/RenderObject.cpp
@@ -1466,6 +1466,9 @@ void RenderObject::willBeDestroyed()
 
 void RenderObject::insertedIntoTree()
 {
+    if (auto* container = LayoutIntegration::LineLayout::blockContainer(*this))
+        container->invalidateLineLayoutPath();
+
     // FIXME: We should ASSERT(isRooted()) here but generated content makes some out-of-order insertion.
     if (!isFloating() && parent()->childrenInline())
         parent()->dirtyLinesFromChangedChild(*this);
@@ -1473,6 +1476,9 @@ void RenderObject::insertedIntoTree()
 
 void RenderObject::willBeRemovedFromTree()
 {
+    if (auto* container = LayoutIntegration::LineLayout::blockContainer(*this))
+        container->invalidateLineLayoutPath();
+
     // FIXME: We should ASSERT(isRooted()) but we have some out-of-order removals which would need to be fixed first.
     // Update cached boundaries in SVG renderers, if a child is removed.
     parent()->setNeedsBoundariesUpdate();
