Source/WebCore/rendering/RenderText.cpp
@@ -1461,8 +1461,8 @@ void RenderText::setText(const String& text, bool force)
     setNeedsLayoutAndPrefWidthsRecalc();
     m_knownToHaveNoOverflowAndNoFallbackFonts = false;
 
-    if (is<RenderBlockFlow>(*parent()))
-        downcast<RenderBlockFlow>(*parent()).invalidateLineLayoutPath();
+    if (auto* container = LayoutIntegration::LineLayout::blockContainer(*this))
+        container->invalidateLineLayoutPath();
     
     if (AXObjectCache* cache = document().existingAXObjectCache())
         cache->deferTextChangedIfNeeded(textNode());
